--- a/apps/site/src/_pages/docs/2_working-with-types.mdx
+++ b/apps/site/src/_pages/docs/2_working-with-types.mdx
@@ -3,12 +3,12 @@
 ## Introduction
 
 When using the Block Protocol's [graph module](/docs/spec/graph-module), data is shared between applications and blocks
-in the form of 'entities', and each entity is assigned to at least one type, known as an 'entity type'.
+in the form of 'entities', and each entity has a type, known as an 'entity type'.
 
 This type describes what properties an entity has, what type of value each is expected to be, and the relationship
 between the entity in question and other entities.
 
-Relationships between entities are known as 'links' and they too are entities, which may have properties and relations to other entities.
+Relationships between entities are known as 'links' and they too are entities, which means they may have properties and relations to other entities.
 
 The system by which types are defined is known as the 'type system'.
 
@@ -17,7 +17,7 @@ The system by which types are defined is known as the 'type system'.
 The Block Protocol type system is designed so that types are composed of re-usable, sharable parts, which can be
 referenced by other users and by other types.
 
-The type system consists of these primitive parts:
+The type system consists of three classes of elements:
 
 1.  **Entity types**: define what properties an entity may have (which _property types_), and what relationships (links) it may have with other entities
 2.  **Property types**: define properties that can be referenced by entity types, and their expected values, which may be a reference to
@@ -43,7 +43,7 @@ You can also define the _links_ your entity expects following a similar process:
 1.  Start typing to see if a suitable link entity type already exists (e.g. called 'Owner')
 2.  Either select an existing link entity type, or click 'create new' to create a new one
 3.  When creating a link entity type, you first specify a title and description
-4.  The expected _destination_ entity types for a given link are specified on each entity type it appears on
+4.  Back on your initial entity type, you can select the link entity type as a potential link from your entity, and then constrain the _destination_ entities of those links by defining a selection of entity types. You can also set a minimum number of such links (e.g. to make it so that entities of your type are _required_ to have certain links).
 
 Make sure to click 'publish update' when you're done to release a new version of the entity type.
 
