--- a/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
@@ -1,26 +1,148 @@
 # Graph Module
 
-This document (version 0.2) defines a **graph module** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
+This document (version 0.3) defines a **graph module** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
 
-The graph module describes how **entities** can be created, queried, updated, and linked together – including the **block entity**, represented by the **properties** sent to the block.
+The graph module describes how **ontology types** and **entities** can be created, queried, updated, and linked together – including the **block entity** (the entity associated directly with the block).
 
 ## Glossary
 
-**Block entity**: an instance of data associated with the block, conforming to the block’s schema.
+**Entity:** an instance of data, often corresponding to a thing in the world, constrained by a particular entity type.
 
-**Entity:** an instance of data, often corresponding to a thing in the world, of a particular entity type.
+**Link Entity:** a kind of entity which represents a connection or relation between its left and right entity, constrained by a link entity type.
 
-**Entity type:** a specific type of entity, with a schema defining its structure. Entities have a type, and types have a schema.
+**Left Entity:** the entity which is on the "left" of a specific link entity – in most situations this can be thought of as the "source" of the link.
 
-**Graph:** a network of entities connected by links.
+**Right Entity:** the entity which is on the "right" of a specific link entity – in most situations this can be thought of as the "target" of the link.
 
-**Link:** a connection or relation between two entities.
+**Ontology Type:** an element of the Block Protocol Type System, represented as a self-contained schema accessible via a URL. Ontology types are composed together to describe the shape of entities within the graph and the potential links between them.
 
-**Linked entities**: entities which are linked to the block entity, whether directly or via other entities.
+**Entity type:** an ontology type that defines the structure of an entity, the type of link entities it may be connected to and the type of entities on the other end of those links. An entity type references other entity types and property types.
 
-**Properties:** the fields on a schema, what types of data are permitted as their values, and any other validation rules. Field types may be scalar (integer, string etc.), complex objects, collections (lists/arrays), or refer to another schema.
+**Link Entity type:** an entity type which has a special marker to say it defines the structure of a link entity.
 
-**Schema:** a definition of a data structure, associated with an entity type. Entities of a given type must have properties which conform to the type’s schema.
+**Property type:** an ontology type that defines the structure of an individual property within an entity. A property type references other property types and data types.
+
+**Data type:** an ontology type that defines the possible space of possible values that an individual property can take within an entity.
+
+**Graph:** a network of graph elements (entities, entity types, property types, and data types) connected by edges.
+
+**Edge:** a directed connection between two graph elements which describes their relationship. Possible edges include those that describe references between types, or the relationship between the left and right entities of link entities.
+
+**Subgraph:** a specific subset of a graph, usually returned as a result of a query. Can contain a set of roots which are distinguished elements of the subgraph, and usually correspond to the direct results of the query – the subgraph may contain other elements of the graph that were connected to the root elements through various edges.
+
+**Block entity**: an entity associated with the specific instance of the block, conforming to block's specified entity type.
+
+**Block Entity Subgraph:** a subgraph which contains the block entity as its root, with connected elements to a given depth.
+
+## The Type System
+
+The data model of the graph module is defined through its **Type System**.
+The type system describes how a graph of **entities** is structured, through a composition of the 3 classes of **ontology types**: **data types**, **property types**, and **entity types**.
+
+When composed, these types are capable of describing any JSON object.
+
+### <Hidden>The Type System </Hidden>Data Types
+
+A **data type** describes a space of possible valid _values_.
+These cover all possible primitive values that can be represented within JSON, as well as `Object`s and `Empty List`s which are included for completeness of the system ([see the RFC for rationale](https://github.com/blockprotocol/blockprotocol/blob/main/rfcs/text/0352-graph-type-system.md#including-an-empty-list-data-type)).
+
+At present, there are 6 primitive data types.
+New ones cannot be created, although that is a planned extension in the near-future, whereby new ones will be defined by combining the primitive data types and constraints such as max lengths, minimum values, etc. ([see the associated in-development RFC](https://github.com/blockprotocol/blockprotocol/pull/355)).
+
+When represented as JSON schema, the 6 primitive data types are:
+
+#### Text
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/text/v/1",
+  "title": "Text",
+  "description": "An ordered sequence of characters",
+  "type": "string"
+}
+```
+
+#### Number
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/number/v/1",
+  "title": "Number",
+  "description": "An arithmetical value (in the Real number system)",
+  "type": "number"
+}
+```
+
+#### Boolean
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/boolean/v/1",
+  "title": "Boolean",
+  "description": "A True or False value",
+  "type": "boolean"
+}
+```
+
+#### Null
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/null/v/1",
+  "title": "Null",
+  "description": "A placeholder value representing 'nothing'",
+  "type": "null"
+}
+```
+
+#### Object
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/object/v/1",
+  "title": "Object",
+  "description": "A plain JSON object with no pre-defined structure",
+  "type": "object"
+}
+```
+
+#### Empty List
+
+```json
+{
+  "$schema": "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
+  "kind": "dataType",
+  "$id": "https://blockprotocol.org/@blockprotocol/types/data-type/empty-list/v/1",
+  "title": "Empty List",
+  "description": "An Empty List",
+  "type": "array",
+  "const": []
+}
+```
+
+### <Hidden>The Type System </Hidden>Property Types
+
+A **property type** is the definition of the possible values that can be associated with a **property**.
+When represented in JSON schema, a property type satisfies the following meta-schema:
+
+<PropertyTypeMetaSchema />
+
+### <Hidden>The Type System </Hidden>Entity Types
+
+An **entity type** is the definition of (1) the structure of an **entity**'s **properties**, and (2) its outgoing **link entities** and their endpoint entities.
+When represented in JSON schema, an entity type satisfies the following meta-schema:
+
+<EntityTypeMetaSchema />
 
 ## Defining blocks
 
@@ -28,11 +150,11 @@ The graph module describes how **entities** can be created, queried, updated, an
 
 #### <Hidden>Block package </Hidden>Summary
 
-Blocks using the graph module may provide a **schema** which describes the shape of their own **properties**, if any. Embedding applications should use this to constrain the properties they send to blocks. These properties are part of the **block entity**.
+Blocks using the graph module provide an **entity type** which describes the shape of their **block entity**. Embedding applications should use this to constrain the entity they send to blocks when they are instantiated, and the entities which are linked to it as part of the block subgraph.
 
-The block’s schema may be included as a file in the **block package**, or referred to by remote address (a URL). If the block has a schema, a path to it must be added to their `block-metadata.json`, under a `schema` key.
+The versioned URL of the entity type's schema must be referenced in the block's `block-metadata.json` under a `schema` key.
 
-Blocks may also add `default` and `examples` keys to `block-metadata.json` to define default and example properties conforming to their schema. If more complex example data is required that involves specifying _other_ entities and links between them, which the block will make use of, a block package may also include an `example-graph.json`.
+Blocks may also add an `examples` key to `block-metadata.json` to define example properties conforming to their schema. If more complex example data is required that involves specifying _other_ entities and link entities between them, which the block will make use of, a block package may also include an `example-graph.json`.
 
 #### <Hidden>Block package </Hidden>Specification
 
@@ -40,231 +162,63 @@ Blocks may also add `default` and `examples` keys to `block-metadata.json` to de
 
 A block using the graph module MAY expand `block-metadata.json` to specify:
 
-- `schema`: a path to a JSON file describing the **properties** the block accepts as part of the **block entity,** using [JSON Schema vocabulary](https://json-schema.org/). This file may be included in the block package, or hosted at a remote address. If the schema hosted at a remote address is subject to change, bear in mind that changes in the schema may invalidate other values in the block metadata (e.g. `default`) or the block’s functioning (e.g. if important constraints are removed).
-- `default`: an object, conforming to the block’s schema, representing the default data that applications should provide when creating a block, unless (a) the block can handle being provided no data when first instantiated or (b) `variants` is provided (see below)
-- `examples`: an array of objects conforming to the block's schema which provide examples of the data that can be passed to it
-- `variants`: an array of objects, each with a `name` and `properties`, and optionally `description`, `icon`, and `examples`. These objects represents different variants of the block that the user can create, where `properties` sets the starting properties. As a simple example, a ‘header’ block might have variants with the `name` ‘Heading 1’ and ‘Heading 2’, which start with `{ level: 1 }` and `{ level: 2 }` as `properties`, respectively
-
-If `schema` is defined, the JSON schema file it refers to:
-
-- MUST specify a **[`required`](https://json-schema.org/draft/2019-09/json-schema-validation.html#rfc.section.6.5.3)** array naming any properties the block will not function without (this MAY be omitted if there are no such properties)
-- SHOULD specify any further constraints or **[validation](https://json-schema.org/draft/2020-12/json-schema-validation.html)** requirements which improve the block’s functionality
-- MAY specify an additional root-level field, `configProperties`, which is an array of `string` values which MUST be present as a key on the block schema's `properties`, i.e. each must name a property the block expects. This field is used to indicate which properties a block considers to be part of 'configuring' how it appears or behaves, rather than data users are creating or viewing via the blocks.
-
-If more complex example data is required, a block’s package may also include a file at the root named `example-graph.json`, which MUST be a JSON object, and MAY contain one or more of:
-
-- `entities`
-- `entityTypes`
-- `links`
-- `linkedAggregations`
-
-If defined, each field MUST be an array of JSON objects, which MUST conform to the structure defined for each of these resources, as specified in [entity definition](#structure-specification).
+- `schema`: the versioned URL of the **entity type** associated with the block entity. As per the specification, the schema hosted at the remote address should not be subject to change and versions of entity types should be treated as immutable, permanently available, records.
+- `examples`: an array of objects conforming to the block's entity type which provide examples of the data that can be passed to it
+- `variants`: an array of objects, each with a `name` and `properties`, and optionally `description`, `icon`, and `examples`. These objects represents different variants of the block that the user can create, where `properties` sets the starting properties. As a simple example, a ‘header’ block might have variants with the `name` ‘Heading 1’ and ‘Heading 2’, which start with `{ "https://blockprotocol.org/@alice/types/property-type/level/": 1 }` and `{ "https://blockprotocol.org/@alice/types/property-type/level/": 2 }` as `properties`, respectively
+  If more complex example data is required, a block’s package may also include a file at the root named `example-graph.json`, which MUST be a JSON object, and MUST contain an `entities` key where each element is a JSON representation of an entity which MUST conform to the structure specified in [entity definition](#structure-specification).
 
 ##### Embedding applications
 
-Embedding applications MUST use the constraints set in the block’s schema, if defined, to constrain the data it sends under `properties` in the **block entity**, assuming the embedding application implements the `blockEntity` message.
-
-Embedding applications MAY choose to display their own UI to allow users to set any values on the block entity described in `configProperties`, and could allow users to set values for them for all blocks of a type (rather than on a per-block instance basis)
+An embedding application MUST use the constraints set in the associated entity type to constrain the data it sends to the block in the **block entity subgraph**.
 
 ## Entity definition
 
-### Structure
+### <Hidden>Entity </Hidden>Structure
 
-#### <Hidden>Structure </Hidden>Summary
+#### <Hidden>Entity Structure </Hidden>Summary
 
-An entity is a combination of **identifying fields** and **properties**.
+An entity is a combination of **metadata** and **properties**.
 
-The **identifying fields** are fixed and specified in this document, and appear as keys at the root of the entity data object.
+The **metadata** is a minimum collection of fields that are fixed and specified in this document, although embedding applications MAY choose to add their own.
 
-The **properties** can be any JSON object which is valid for the entity’s type. This object is nested under a `properties` key on the entity data object.
+The **properties** is a JSON object which satisfies the constraints of the entity’s **entity type**.
 
-Each entity has an **entity type** representing the type of thing that it is. In turn, an entity type has a **schema** which sets constraints on the permitted **properties** belonging to an entity.
-
-**Links** represent connections or relations between entities. In the language of an entity graph, the links are the edges, and the entities are the nodes.
-
-**Linked aggregations** represent a link from a block to a particular aggregation of entities, e.g. the top 10 entities of type Person, sorted by a particular property.
-
-#### <Hidden>Structure </Hidden>Specification
+#### <Hidden>Entity Structure </Hidden>Specification
 
 ##### Entities
 
 When embedding applications pass entities to blocks, whether the **block entity** or any other:
 
-- entities MUST be represented by an object, which contains one or more **identifying fields** at the top level. The object:
-  - MUST contain an `entityId` identifying the entity, which MUST be a string.
-  - MAY contain an `entityTypeId` identifying the entity type the entity belongs to, which MUST be a string (if defined).
-- MUST contain a `properties` field if the block has defined any `required` properties in its schema, and otherwise MAY be omitted. If present, it:
-  - MUST be an object
-  - MUST conform to the constraints described in the entity’s schema, if any
+- entities MUST be represented by an object, which:
+
+  - MUST contain a field `metadata`, an object which:
+  - MUST contain a field `recordId`, an object which:
+    - MUST contain a field `entityId` uniquely identifying the entity in the application, which MUST be a string.
+    - MUST contain a field `editionId` which identifies the specific _edition_ of the entity, which MUST be a string, and MUST be unique for each edition of an entity for applications that have versioning for their data.
+  - MUST contain an `entityTypeId` identifying the entity type the entity belongs to, which MUST be a versioned URL from which a valid entity type schema is retrievable.
+
+  - MUST contain a field `properties` if the block has defined any `required` properties in its schema, and otherwise MAY be omitted. If present, it:
+    - MUST be an object
+    - MUST conform to the constraints described by the entity type of the entity
+  - if the entity is a link entity it MUST (and if it is not, MUST NOT) contain a field `linkData`, an object which:
+    - MUST contain a field `leftEntityId` identifying the left entity of the link, which MUST be a string
+    - MUST contain a field `rightEntityId` identifying the right entity of the link, which MUST be a string
+    - MAY contain a field `leftToRightOrder` used to order this link entity against other link entities of the same type with the same `leftEntityId`, which MUST be a non-negative integer
+    - MAY contain a field `rightToLeftOrder` used to order this link entity against other link entities of the same type with the same `rightEntityId`, which MUST be a non-negative integer
 
 i.e. any entity MUST conform to the following schema:
 
-```json
-{
-  "$id": "https://blockprotocol.org/types/modules/graph/entity",
-  "title": "Entity",
-  "type": "object",
-  "properties": {
-    "entityId": {
-      "type": "string"
-    },
-    "entityTypeId": {
-      "type": "string"
-    },
-    "properties": {
-      "$ref": "https://example.com/path-to-the-entity-schema"
-    }
-  },
-  "required": ["entityId"]
-}
-```
+<EntityMetaSchema />
 
-##### Entity types
+### <Hidden>Entity </Hidden>Identification
 
-Embedding applications SHOULD also provide – via the `entityTypes` message – an **entity type** for each entity they provide the block, including the block entity. Where provided, an **entity type**:
-
-- MUST be represented by an object, which:
-  - MUST contain an `entityTypeId` identifying the type, which MUST be a string
-  - MUST contain a `schema`, a JSON Schema object defining the constraints on the data in the entity’s `properties` field, which
-    - MUST be of `type: "object"`
-    - SHOULD use our JSON Schema extensions where appropriate
-    - MAY otherwise contain any valid JSON Schema
-
-i.e. entity types MUST conform to the following JSON schema:
-
-```json
-{
-  "$id": "https://blockprotocol.org/types/modules/graph/entity-type",
-  "title": "EntityType",
-  "type": "object",
-  "properties": {
-    "entityTypeId": {
-      "type": "string"
-    },
-    "schema": {
-      "$ref": "https://json-schema.org/draft/2020-12/schema"
-    }
-  },
-  "required": ["entityTypeId", "schema"]
-}
-```
-
-Blocks SHOULD use any schemas provided in the `entityTypes` message to understand the constraints on user input for each entity (e.g. what type(s) of data are valid for each property).
-
-##### Links
-
-Entities MAY be connected by a **link**, which:
-
-- MUST contain:
-  - `sourceEntityId`: the `entityId` of the source entity, which MUST be a string
-  - `destinationEntityId`: the id of a single entity the link is made to, which MUST be a string
-  - `path`: the path to the field on the source entity this link is conceptually made on, expressed as a **[JSON path](https://goessner.net/articles/JsonPath/)**, which MUST be a string
-- MAY contain
-  - `index`: the position of this link in a list (for where ordering of links is important), which MUST be an integer (if defined), where 0 is the first entry in the list
-
-i.e. links MUST conform to the following schema:
-
-```json
-{
-  "$id": "https://blockprotocol.org/types/modules/graph/link",
-  "title": "Link",
-  "type": "object",
-  "properties": {
-    "sourceEntityId": {
-      "type": "string"
-    },
-    "destinationEntityId": {
-      "type": "string"
-    },
-    "path": {
-      "type": "string"
-    },
-    "index": {
-      "type": "integer",
-      "inclusiveMinimum": 0
-    }
-  },
-  "required": ["sourceEntityId", "destinationEntityId", "path"]
-}
-```
-
-Where the block entity has links from it to other entities:
-
-- Embedding applications MUST implement a `blockGraph` message which represents the graph with the block entity at the root, the `data` for which MUST be an object, which:
-  - MUST contain a `linkGroups` key, which contains a list of objects which group the links in the resolved graph (i.e. the edges) by entity and path. Each object:
-    - MUST contain `links`, an array of links
-    - MUST contain the `sourceEntityId`, identical across all entries in `links`
-    - MUST contain the `path`, identical across all entries in `path`
-  - MUST contain a `linkedEntities` key, which contains a list of the entities in the resolved graph (i.e. the nodes)
-  - MUST contain a `depth` key, which indicates the depth to which the graph around the block entity has been resolved.
-- Embedding applications MUST at least provide the links from the block entity. This represents a depth of `0`. They MAY also include the entities linked from the block entity and _their_ links which is a depth of `1`, and so on.
-- See [blockGraph](#block-graph)
-
-`linkGroups` should conform to the following schema:
-
-```json
-{
-  "$id": "https://blockprotocol.org/types/modules/graph/link-group",
-  "title": "LinkGroup",
-  "type": "object",
-  "properties": {
-    "links": {
-      "type": "array",
-      "items": {
-        "$ref": "https://blockprotocol.org/types/modules/graph/link"
-      }
-    },
-    "sourceEntityId": {
-      "type": "string"
-    },
-    "path": {
-      "type": "string"
-    }
-  },
-  "required": ["sourceEntityId", "destinationEntityId", "path"]
-}
-```
-
-##### Linked aggregations
-
-Blocks may also wish to link an entity to a particular aggregation of entities. To do so, blocks SHOULD create a **LinkedAggregationDefinition**, which:
-
-- MUST contain:
-  - `sourceEntityId`: the `entityId` of the source entity
-  - `operation`: an aggregation operation which the embedding application should resolve the link to, following the structure of the `operation` object
-  - `path`: the path to the field on the source entity this link is conceptually made on, expressed as a **[JSON path](https://goessner.net/articles/JsonPath/)**, which MUST be a string
-
-i.e. a linked aggregation definition must conform to the following schema:
-
-```json
-{
-  "$id": "https://blockprotocol.org/types/modules/graph/linked-aggregation-definition",
-  "title": "LinkedAggregationDefinition",
-  "type": "object",
-  "properties": {
-    "sourceEntityId": {
-      "type": "string"
-    },
-    "path": {
-      "type": "string"
-    },
-    "operation": {
-      "$ref": "https://blockprotocol.org/types/modules/graph/aggregation-operation"
-    }
-  },
-  "required": ["sourceEntityId", "operation", "path"]
-}
-```
-
-### Identification
-
-#### <Hidden>Identification </Hidden>Summary
+#### <Hidden>Entity Identification </Hidden>Summary
 
 Blocks must pass an `entityId` when making requests in respect of any entity.
 
-Embedding applications should ensure this is stable and unique for any given entity.
+Embedding applications should ensure that the `entityId` is stable and unique for any given entity, across any versions of it that may exist.
 
-#### <Hidden>Identification </Hidden>Specification
+#### <Hidden>Entity Identification </Hidden>Specification
 
 Blocks MUST provide `entityId` when identifying a particular entity for the purpose of **messages** under the graph module.
 
@@ -272,32 +226,216 @@ Embedding applications MUST provide `entityId` for each entity it supplies the b
 
 `entityId` SHOULD be a stable, unique reference to the entity, so that blocks may use it for comparing the identity of entities – i.e. so that blocks can assume that entities with the same `entityId` are the same entity, and that the same entity referenced in different places will have the same `entityId` wherever it appears.
 
-### JSON Schema extensions
+## Subgraph Definition
 
-#### <Hidden>JSON Schema extensions </Hidden>Summary
+### <Hidden>Subgraph </Hidden>Summary
 
-We define additional keywords for use as part of a JSON Schema definition.
+Many of the values returned by embedding applications for messages of the graph module include a **subgraph**.
 
-We will publish a JSON schema vocabulary and meta-schema which allows for validating these custom keywords.
+A subgraph is a data structure which contains elements of the graph, **vertices**, and **edges** which is a precomputed lookup set of the relationships between elements of the graph.
 
-We also intend to introduce a richer vocabulary for defining entities and links between them in JSON Schema, using composable property types and data types. Please see the RFC.
+### <Hidden>Subgraph </Hidden>Structure
 
-#### <Hidden>JSON Schema extensions </Hidden>Specification
+A **subgraph** is a JSON object with the following fields, each described in detail below:
 
-As well as the core and validation [JSON Schema](https://json-schema.org) vocabularies:, the following keywords MAY be used at the **root** of the schema definition:
+- `roots`
+- `vertices`
+- `edges`
+- `depths`
 
-- `labelProperty`: a single `string`, which MUST be present as a key on the schema's `properties`, i.e. it must name a property available on the entity. Where an entity’s schema is provided as part of the `entityTypes` message, and it contains a `labelProperty` pointing to a defined property on the entity, blocks MUST use the value for that property as a display name for the entity where appropriate.
+#### <Hidden>Subgraph Structure</Hidden> Vertices
+
+##### <Hidden>Subgraph Structure Vertices</Hidden> Vertex
+
+A `Vertex` is a JSON object which satisfies the following schema:
 
 ```json
 {
-  "$id": "https://example.com/Person",
   "type": "object",
   "properties": {
-    "name": { "type": "string" },
-    "age": { "type": "number" }
+    "kind": {
+      "oneOf": ["entity"]
+    },
+    "inner": {
+      "$comment": "the entity",
+      "type": "object"
+    }
   },
-  "labelProperty": "name"
+  "required": ["kind", "inner"]
 }
+```
+
+> **Note**: The `kind` field is used to allow for future expansion of the subgraph format to include other kinds of vertices, such as ontology types.
+
+##### <Hidden>Subgraph Structure Vertices</Hidden> The `Vertices` object
+
+The `vertices` field of a **subgraph** is a JSON object where:
+
+- the keys are `entityId`s
+- the values are a JSON object where:
+  - the keys are `revisionId`s - a unique identifier for an instance of a specific **entity** within a subgraph, and MUST be a string. This is a forward-facing field which currently doesn't serve a functional purpose and as such can be any string.
+  - the values are `Vertex` objects
+
+> **Note**: The `revisionId` will be used to identify different revisions of the same element within a single subgraph. This could be multiple versions of the same ontology type, or multiple revisions of an entity in an application that supports versioning.
+
+#### <Hidden>Subgraph Structure</Hidden> Roots
+
+The **roots** of a subgraph are distinguished elements which were the starting points for traversal of **edges** (up to depths defined by the **graph resolve depths**).
+
+The `roots` _field_ of the subgraph is an array of **Vertex IDs** which identify the roots, and are JSON objects which satisfy the following schema:
+
+```json
+{
+  "type": "object",
+  "properties": {
+    "baseId": {
+      "type": "string"
+    },
+    "revisionId": {
+      "type": "string"
+    }
+  },
+  "required": ["baseId", "revisionId"]
+}
+```
+
+The `baseId` field MUST correspond to the key of the `vertices` object which is the parent of the object that contains the vertex of the root.
+The `revisionId` field MUST correspond to the key of the object of `vertices[baseId]` which contains the vertex of the root.
+
+That is to say, `subgraph.vertices[baseId][revisionId]` MUST be the vertex of the root in question.
+
+#### <Hidden>Subgraph Structure</Hidden> Edges
+
+##### <Hidden>Subgraph Structure Vertices</Hidden> 'Outward' Edge
+
+An **outward edge** is a partial definition of an edge between two vertices, which defines the edge-variant and one of the endpoints of the edge.
+When used in the context of the `Edges` object, it fully qualifies the definition of a `leftEndpoint - edge -> rightEndpoint`
+
+It's made up of a trio of information:
+
+- `reversed`
+- `kind` the kind of edge, which is one of:
+  - `HAS_LEFT_ENTITY`
+  - `HAS_RIGHT_ENTITY`
+- `rightEndpoint` the `entityId` of the right endpoint of the edge
+
+The fields lead to the following permutations:
+
+**Entity has outgoing link** (the entity on the left endpoint has an outgoing link entity)
+
+```json
+{
+  "reversed": true,
+  "kind": "HAS_LEFT_ENTITY",
+  "rightEndpoint": "Some Entity Id"
+}
+```
+
+**Entity has incoming link** (the entity on the left endpoint has an incoming link entity)
+
+```json
+{
+  "reversed": true,
+  "kind": "HAS_RIGHT_ENTITY",
+  "rightEndpoint": "Some Entity Id"
+}
+```
+
+**Link Entity has left entity** (the link entity on the left endpoint has a left entity)
+
+```json
+{
+  "reversed": false,
+  "kind": "HAS_LEFT_ENTITY",
+  "rightEndpoint": "Some Entity Id"
+}
+```
+
+**Link Entity has right entity** (the link entity on the left endpoint has a right entity)
+
+```json
+{
+  "reversed": false,
+  "kind": "HAS_RIGHT_ENTITY",
+  "rightEndpoint": "Some Entity Id"
+}
+```
+
+Specifically an `OutwardEdge` is a JSON object which satisfies the following schema:
+
+```json
+{
+  "type": "object",
+  "properties": {
+    "kind": {
+      "oneOf": ["HAS_LEFT_ENTITY", "HAS_RIGHT_ENTITY"]
+    },
+    "reversed": {
+      "type": "boolean"
+    },
+    "rightEndpoint": {
+      "$comment": "The entity ID of the right endpoint of this edge",
+      "type": "string"
+    }
+  },
+  "required": ["kind", "reversed", "rightEndpoint"]
+}
+```
+
+##### <Hidden>Subgraph Structure Vertices</Hidden> The `Edges` object
+
+The `edges` field of a **subgraph** is a JSON object where:
+
+- the keys are `entityId`s
+- the values are a JSON object where:
+  - the keys identify the point at which the edge was created, and MUST be strings - This is a forward-facing field which currently doesn't serve a functional purpose and as such can be any string.
+  - the values are an array of `OutwardEdge` objects of the edges that have an endpoint at the entity associated with the `entityId`.
+
+#### <Hidden>Subgraph Structure</Hidden> Resolve Depths
+
+A **subgraph** is constructed by exploring the datastore along **edges** from a set of **elements**.
+This traversal is limited by a set of **resolve depths** which constrain the depth of the query.
+
+The `resolveDepths` field of the subgraph is a JSON object which:
+
+- MUST contain key `hasLeftEntity`
+- MUST contain key `hasRightEntity`
+- the values of `hasLeftEntity` and `hasRightEntity` MUST be a JSON object which:
+  - MUST contain the key `incoming` and the value MUST be an integer between 0 and 255, which defines the number of incoming edges to explore of that edge kind
+  - MUST contain the key `outgoing` and the value MUST be an integer between 0 and 255, which defines the number of outgoing edges to explore of that edge kind
+
+While traversing, the depths are decremented according to the following pseudo-code:
+
+```js
+export const traverseElement = ({
+  datastore,
+  element,
+  currentTraversalDepths,
+}) => {
+  // handle element
+
+  for (const [edgeKind, depthsPerDirection] of currentTraversalDepths) {
+    for (const [direction, depth] of depthsPerDirection) {
+      if (depth < 1) {
+        continue;
+      }
+
+      for (const neighborVertex of getNeighbors(element, edgeKind, direction)) {
+        traverseElement({
+          datastore,
+          neighborVertex,
+          currentTraversalDepths: {
+            ...currentTraversalDepths,
+            [edgeKind]: {
+              ...currentTraversalDepths[edgeKind],
+              [direction]: depth - 1,
+            },
+          },
+        });
+      }
+    }
+  }
+};
 ```
 
 ## Messages
@@ -311,6 +449,8 @@ The following error codes MAY appear as a value for `code` in an entry in the `e
 - `NOT_FOUND`: the message relied on an entity that was not found
 - `FORBIDDEN`: the message relied on permissions that the user or block does not have
 - `INVALID_INPUT`: the message relied on previous input that was missing or otherwise invalid
+- `NOT_IMPLEMENTED`: the embedding application or block does not support the requested operation
+- `INTERNAL_ERROR`: the embedding application encountered an internal error while executing the request
 
 Individual messages MAY specify only a subset of these codes as being valid for that message.
 
@@ -327,18 +467,10 @@ Note that there is no reason why embedding applications cannot make requests, no
 
 The **values** are all sent from the embedding application to the block on initialization, and re-sent subsequently if they change. They are:
 
-- `blockEntity`: the block entity, conforming to the constraints defined in the block schema
-- `entityTypes`: the entity type definitions for any entities provided to the block in other messages
-- <span id="block-graph">`blockGraph`</span>: the entity graph with the block at
-  its root, which contains: - `linkedEntities`: the entities linked from the
-  block entity, and from those entities, and so on, resolved to a depth
-  determined by the embedding application - `linkGroups`: the links from the
-  block entity and the links from any entities in `linkedEntities`, grouped by
-  source entity and link path
-- `linkedAggregations`: field containing the definitions and results of aggregations linked from the block’s entity - these are special objects which contain an aggregation definition (e.g. in plain English, "top 10 Cars sorted by age, descending") and its results at the time of provision
+- `blockEntitySubgraph`: the subgraph rooted at the block entity, resolved to a depth determined by the embedding application and reported in the `depths` field of the subgraph
 - `readonly`: whether or not the block should display in ‘readonly’ mode, disabling or hiding any editing controls it offers.
 
-The **requests** may be made by the block once it has been initialized, and represent operations which create, read, update or delete entities, entity types, and create links. They are named according to the pattern `[action][Resource]`, e.g. `createEntity`.
+The **requests** may be made by the block once it has been initialized, and represent operations which create, read, update or delete entities. They are named according to the pattern `[action][Resource]`, e.g. `createEntity`.
 
 As well as the formal module JSON specification, the messages can be sent and received via the `@blockprotocol/graph` [package](https://www.npmjs.com/package/@blockprotocol/graph).
 
